Trying to fix stretched mockup images on mobile devices

--- a/src/components/Project.scss
+++ b/src/components/Project.scss
@@ -117,7 +117,6 @@
 }
 
 .contributions-wrapper {
-    // margin: 0em auto 0em auto;
     max-width: 100% !important;
     li {
         padding-left: 1em;
@@ -126,7 +125,8 @@
 
 .mockup {
     img {
-        width: 80%;
+        width: 80em;
+        height: auto;
         margin: 1em auto 1em auto;
     }
 }
@@ -173,6 +173,13 @@
             margin: 0em 0.5em 0.1em 0.5em;
         }
     }
+    .mockup {
+        img {
+            width: 25em;
+            height: auto;
+            margin: 1em auto 1em auto;
+        }
+    }
     .back-btn {
         padding: 1em 0em 2em 0em;
         a {
@@ -210,6 +217,13 @@
         .svg-inline--fa {
             font-size: 2.5em !important;
             margin: 0em 0.5em 0.1em 0.5em;
+        }
+    }
+    .mockup {
+        img {
+            width: 50em;
+            height: auto;
+            margin: 1em auto 1em auto;
         }
     }
     .back-btn {
